@@ -291,7 +291,9 @@ public abstract class FSDirectory extends BaseDirectory {
 
     for (String name : toSync)
       fsync(name);
-
+    
+    IOUtils.fsync(directory, true);
+    
     staleFiles.removeAll(toSync);
   }
 
@@ -395,6 +397,6 @@ public abstract class FSDirectory extends BaseDirectory {
   }
 
   protected void fsync(String name) throws IOException {
-    IOUtils.fsync(new File(directory, name));
+    IOUtils.fsync(new File(directory, name), false);
   }
 }
